--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
     "antd": "^5.20.4",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "firebase": "^10.13.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.438.0",
     "react": "^18.3.1",
