destination URL updated

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
       {
         "source": "/api/:match*",
-        "destination": "https://donatenico-server-app.onrender.com.onrender.com/api/:match*"
+        "destination": "https://donatenico-server-app.onrender.com/api/:match*"
       },
       {
         "source": "/(.*)",
